[gd_scene load_steps=2 format=3 uid="uid://psa2r7t2deun"]

[ext_resource type="Script" path="res://interface/CreateMapMenu.gd" id="1_b1m7w"]

[node name="CreateMapMenu" type="Control" node_paths=PackedStringArray("seed_box", "error_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1m7w")
seed_box = NodePath("Center/Options/HBoxContainer/SpinBox")
error_label = NodePath("Center/Options/Error")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="VBoxContainer" parent="Center"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Center/Options"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
placeholder_text = "Nome do mundo"
alignment = 1
max_length = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Center/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Center/Options/HBoxContainer"]
layout_mode = 2
text = "Semente "

[node name="SpinBox" type="SpinBox" parent="Center/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -9.22337e+18
max_value = 9.22337e+18
update_on_text_changed = true
custom_arrow_step = 1.0

[node name="OptionButton" type="OptionButton" parent="Center/Options"]
layout_mode = 2
flat = true
alignment = 1
selected = 2
item_count = 4
popup/item_0/text = "Muito pequeno"
popup/item_0/id = 3
popup/item_1/text = "Pequeno"
popup/item_1/id = 1
popup/item_2/text = "MÃ©dio"
popup/item_2/id = 1
popup/item_3/text = "Grande"
popup/item_3/id = 2

[node name="Error" type="Label" parent="Center/Options"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.455298, 0.386895, 1)
horizontal_alignment = 1

[node name="New" type="Button" parent="Center/Options"]
layout_mode = 2
text = "Confirmar"

[node name="Exit" type="Button" parent="Center/Options"]
layout_mode = 2
text = "Cancelar"

[connection signal="text_changed" from="Center/Options/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="value_changed" from="Center/Options/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="item_selected" from="Center/Options/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Center/Options/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Center/Options/Exit" to="." method="_on_exit_pressed"]
